--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>网盘资源搜索</title>
+<title>YALI</title>
 <!-- 引入外部CSS文件 -->
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>🔍 网盘资源搜索</h1>
+<h1> YALI</h1>
 <div class="search-box">
   <input type="text" id="keyword" placeholder="输入资源名称..." autocomplete="off" />
   <button onclick="search()">搜索</button>
