--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <input type="text" id="keyword" placeholder="输入资源名称..." autocomplete="off" />
   <button onclick="search()">搜索</button>
 </div>
-  <!-- ========== 资源分类入口 ========= -->
+
+<!-- ========== 固定链接分类入口 (可选) ========= -->
+<!--
 <div class="categories" style="max-width: 800px; margin: 0 auto 25px; text-align: center;">
   <h2 style="color: #333; margin-bottom: 12px; font-size: 20px;">📂 资源分类浏览</h2>
   <p style="margin: 0;">
@@ -27,6 +29,10 @@
     <a href="https://www.kdocs.cn/wo/sl/v11RMuNK">📖 许愿池实时大屏</a>
   </p>
 </div>
+-->
+
+<!-- 动态分类按钮将会被 JavaScript 插入到这里 -->
+
 <div id="results" class="results"></div>
 
 <!-- Access Code Modal -->
