--- a/index.html
+++ b/index.html
@@ -9,29 +9,36 @@
 </head>
 <body>
 
-<h1> YALI</h1>
-<div class="search-box">
-  <input type="text" id="keyword" placeholder="输入资源名称..." autocomplete="off" />
-  <button onclick="search()">搜索</button>
-</div>
+<!-- 主内容容器 -->
+<div class="container">
 
-<!-- ========== 固定链接分类入口 (可选) ========= -->
-<div class="categories" style="max-width: 800px; margin: 25px auto; text-align: center;">
-  <h2 style="color: #333; margin-bottom: 12px; font-size: 20px;">📂 资源分类浏览</h2>
-  <p style="margin: 0;">
-    <a href="https://www.kdocs.cn/l/crOyXHBVm96c">📖 获取教程</a>
-    <a href="https://share.mubu.com/doc/EBEMhUZL2z">📖 日更清单</a>
-    <a href="https://www.kdocs.cn/wo/sl/v1jDRid">📖 连载漫</a>
-    <a href="https://www.kdocs.cn/wo/sl/v117pXxr">📖 完结漫</a>
-    <a href="https://www.kdocs.cn/wo/sl/v14Bf1xz">📖 小说</a>
-    <a href="https://web.wps.cn/wo/sl/v39HLe4?app_id=KeiwhRvKjT82N9D0HUUL6">📖 许愿池</a>
-    <a href="https://www.kdocs.cn/wo/sl/v11RMuNK">📖 许愿池实时大屏</a>
-  </p>
-</div>
+  <h1>YALI</h1>
 
-<!-- 动态分类按钮将会被 JavaScript 插入到这里 -->
+  <div class="search-box">
+    <input type="text" id="keyword" placeholder="输入资源名称..." autocomplete="off" />
+    <button onclick="search()">搜索</button>
+  </div>
 
-<div id="results" class="results"></div>
+  <!-- ========== 固定链接分类入口 ========= -->
+  <div class="categories">
+    <h2>📂 资源分类浏览</h2>
+    <p>
+      <a href="https://www.kdocs.cn/l/crOyXHBVm96c" class="card-link">📖 获取教程</a>
+      <a href="https://share.mubu.com/doc/EBEMhUZL2z" class="card-link">📅 日更清单</a>
+      <a href="https://www.kdocs.cn/wo/sl/v1jDRid" class="card-link">📚 连载漫</a>
+      <a href="https://www.kdocs.cn/wo/sl/v117pXxr" class="card-link">📘 完结漫</a>
+      <a href="https://www.kdocs.cn/wo/sl/v14Bf1xz" class="card-link">📖 小说</a>
+      <a href="https://web.wps.cn/wo/sl/v39HLe4?app_id=KeiwhRvKjT82N9D0HUUL6" class="card-link">🪄 许愿池</a>
+      <a href="https://www.kdocs.cn/wo/sl/v11RMuNK" class="card-link">📊 实时大屏</a>
+    </p>
+  </div>
+
+  <!-- 动态分类按钮将会被 JavaScript 插入到这里 -->
+  <!-- <div id="dynamic-category-buttons-container"></div> -->
+
+  <div id="results" class="results"></div>
+
+</div> <!-- /container -->
 
 <!-- Access Code Modal -->
 <div id="auth-modal">
